--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,11 @@ services:
   portsapp:
     image: fabricioandreis/ports-app:latest
     environment:
-      - REDIS_ADDRESS=localhost:6379
+      - PORTS_INPUT_JSON_PATH=/data/ports.json
+      - REDIS_ADDRESS=redis:6379
       - REDIS_PASSWORD=
+    volumes: 
+      - ./ports.json:/data/ports.json
     depends_on:
       - redis
 
