--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Run Unit Tests
+name: Continuous Delivery pipeline
 
 on:
   push:
@@ -20,6 +20,12 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: '1.20'
-        
+
+    - name: Static analysis
+      run: make vet
+
+    - name: Build
+      run: make build
+
     - name: Test
       run: make test
