chore: generate unit test results and coverage, upload them to artifacts repository

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,5 +27,17 @@ jobs:
     - name: Build
       run: make build
 
-    - name: Test
-      run: make test
+    - name: Test Coverage
+      run: make test-coverage
+
+    - name: Upload unit test results
+      uses: actions/upload-artifact@v3
+      with:
+        name: unit-test-results
+        path: unit-test-results.json
+
+    - name: Upload unit test coverage
+      uses: actions/upload-artifact@v3
+      with:
+        name: unit-test-coverage
+        path: unit-test-coverage.html
