--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,9 @@ version: '3.8'
 services:
 
   app:
-    image: fabricioandreis/ports-app:latest
+    build: 
+      dockerfile: Dockerfile
+      context: .
     environment:
       - PORTS_INPUT_JSON_PATH=/data/ports.json
       - REDIS_ADDRESS=redis:6379
