--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
 
-  continuous-delivery:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -47,6 +47,14 @@ jobs:
       with:
         name: release-candidate-binary
         path: ports-app
+
+  acceptance-tests:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Download release candidate
+      uses: actions/download-artifact@v3
+      with:
+        name: ports-app
 
     - name: Run Acceptance Tests
       run: make acceptance-tests
