--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -50,6 +50,7 @@ jobs:
 
   acceptance-tests:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - name: Download release candidate
       uses: actions/download-artifact@v3
