--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -52,6 +52,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+    - uses: actions/checkout@v3
+    
     - name: Download release candidate
       uses: actions/download-artifact@v3
       with:
