--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     build: 
       dockerfile: Dockerfile
       context: .
+      tags:
+        - "fabricioandreis/ports-app:latest"
     environment:
       - PORTS_INPUT_JSON_PATH=/data/ports.json
       - REDIS_ADDRESS=redis:6379
