feat: add acceptance tests to run on the continuous delivery pipeline

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -60,5 +60,5 @@ jobs:
         name: release-candidate
 
     - name: Run Acceptance Tests
-      run: make acceptance-tests
+      run: make pipeline-acceptance-tests
     
