--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
 
   app:
-    build: 
+    build:
       dockerfile: Dockerfile
       context: .
       tags:
@@ -11,7 +11,7 @@ services:
       - PORTS_INPUT_JSON_PATH=/data/ports.json
       - REDIS_ADDRESS=redis:6379
       - REDIS_PASSWORD=
-    volumes: 
+    volumes:
       - ./ports.json:/data/ports.json
     depends_on:
       - redis
@@ -24,6 +24,22 @@ services:
     command: redis-server --loglevel warning
     volumes:
       - redis:/data
+
+  acceptance-tests:
+    build:
+      dockerfile: ./internal/tests/Dockerfile
+      context: .
+      tags:
+        - "fabricioandreis/ports-app-accept-tests:latest"
+    environment:
+      - PORTS_INPUT_JSON_PATH=/data/ports.json
+      - REDIS_ADDRESS=redis:6379
+      - REDIS_PASSWORD=
+    volumes:
+      - ./internal/tests/subset-ports.json:/data/ports.json
+    depends_on:
+      app:
+        condition: service_completed_successfully
 
 volumes:
   redis:
