--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -50,7 +50,7 @@ jobs:
 
   acceptance-tests:
     runs-on: ubuntu-latest
-    needs: build
+    needs: continuous-integration
     steps:
     - uses: actions/checkout@v3
     
