--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -12,6 +12,7 @@ on:
 jobs:
 
   continuous-integration:
+    name: Continuous Integration
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -49,6 +50,7 @@ jobs:
         path: ports-app
 
   acceptance-tests:
+    name: Acceptance Tests
     runs-on: ubuntu-latest
     needs: continuous-integration
     steps:
