chore: add static analysis with golintci-lint to the continuous delivery pipeline

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -22,8 +22,11 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Static analysis
+    - name: Static analysis with Vet
       run: make vet
+
+    - name: Static analysis with golangci-lint
+      uses: golangci/golangci-lint-action@v3
 
     - name: Build
       run: make build
